# vggt-cpp-inference

./: .gitignore  CMakeLists.txt  OnnxVGGT.h  README.md  test.cpp
